
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int eopt ;
typedef int WSADATA ;
typedef int WORD ;
typedef int SOCKET ;
typedef int BOOL ;


 int AF_INET ;
 int INADDR_NONE ;
 int INVALID_SOCKET ;
 int IPPROTO_IP ;
 int IPPROTO_RAW ;
 int IP_HDRINCL ;
 int MAKEWORD (int,int) ;
 scalar_t__ SOCKET_ERROR ;
 int SOCK_RAW ;
 int TRUE ;
 int WSACleanup () ;
 int WSASocket (int ,int ,int ,int ,int ,int ) ;
 scalar_t__ WSAStartup (int ,int *) ;
 int atoi (char*) ;
 int closesocket (int ) ;
 int da ;
 unsigned char* dip ;
 int dp ;
 int* dport ;
 int inet_addr (char*) ;
 int printf (char*,...) ;
 int sa ;
 scalar_t__ setsockopt (int ,int ,int ,char*,int) ;
 unsigned char* sip ;
 int sp ;
 int* sport ;
 int srand (unsigned int) ;
 scalar_t__ time (int ) ;
 char* usage ;
 int work (int ) ;

int main(int argc, char **argv)
{
WORD ver = MAKEWORD(2, 2);
WSADATA data;
unsigned char *p;
SOCKET s;
int ret = 1;
BOOL eopt = TRUE;

if (5 != argc) {
printf(usage, argv[0]);
goto out;
}

if (INADDR_NONE == (da = inet_addr(argv[1]))) {
printf("dest ip address is NOT valid!\n");
printf(usage, argv[0]);
goto out;
}

p = (unsigned char *)&da;
dip[0] = p[0];
dip[1] = p[1];
dip[2] = p[2];
dip[3] = p[3];

dp = atoi(argv[2]);
dport[0] = ((dp << 16) >> 24);
dport[1] = ((dp << 24) >> 24);

if (INADDR_NONE == (sa = inet_addr(argv[3]))) {
printf("source ip address is NOT valid!\n");
printf(usage, argv[3]);
goto out;
}

p = (unsigned char *)&sa;
sip[0] = p[0];
sip[1] = p[1];
sip[2] = p[2];
sip[3] = p[3];

sp = atoi(argv[4]);
sport[0] = ((sp << 16) >> 24);
sport[1] = ((sp << 24) >> 24);

srand((unsigned int)time(0));

if (WSAStartup(ver, &data)) {
printf("WSAStartup() failed\n");
goto out;
}

if (INVALID_SOCKET == (s = WSASocket(AF_INET, SOCK_RAW, IPPROTO_RAW, 0, 0, 0)))
goto err;

if (SOCKET_ERROR == setsockopt(s, IPPROTO_IP, IP_HDRINCL,
(char *)&eopt, sizeof(eopt)))
goto err1;

work(s);

err1:
closesocket(s);
err:
WSACleanup();

out:
return ret;
}
